# yal

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: canvas.hpp  config.hpp  controller.hpp  event_loop.hpp  field.hpp  generator.hpp  log.hpp  rgba.hpp  types.hpp  window.hpp
include/events/: publisher.hpp  subscriber.hpp  window_drawing_events.hpp  window_input_events.hpp
src/: controller.cpp  event_loop.cpp  field.cpp  generator.cpp  main.cpp  window.cpp
